Fixed null contour bleeding

--- a/public/main.css
+++ b/public/main.css
@@ -15,6 +15,7 @@
 h1.title {
     margin-top: 15px;
 }
-section.section:first-child {
+section.section {
     padding-top: 20px;
+    padding-bottom: 20px;
 }
